--- a/epicdoc/css/epicdoc.css
+++ b/epicdoc/css/epicdoc.css
@@ -50,29 +50,12 @@
 .ed-icon-code {
 	background: url(../img/code.png) center no-repeat;
 }
+.ed-icon-storage {
+	background: url(../img/storage.png) center no-repeat;
+}
 .ed-icon-tree-folder {
 	background: url(../img/folder-close.png) center no-repeat !important;
 }
 .x-grid-tree-node-expanded .ed-icon-tree-folder {
 	background: url(../img/folder-open.png) center no-repeat !important;
 }
-
-/*
-.white-color {
-	color: white; 
-}
-.move-icon {
-	background: url(../image/move.png);
-}
-.remove-icon {
-	background: url(../image/remove.png);
-}
-.document-icon {
-	background: url(../image/document.png) center no-repeat !important;
-}
-.folder-icon {
-	background: url(../image/folder.png) center no-repeat !important;
-}
-.x-tool-add-icon {
-	background: url(../image/add.png) !important;
-}*/
